[gd_scene load_steps=3 format=3 uid="uid://ccpdb5jctequm"]

[ext_resource type="Script" uid="uid://dy7l7xohs6gpf" path="res://scripts/instructions.gd" id="1_nisbi"]
[ext_resource type="Texture2D" uid="uid://b4gu1vistwmu6" path="res://images/instruction_sun.png" id="2_njqp3"]

[node name="Instructions" type="Node2D"]
visible = false
light_mask = 0
script = ExtResource("1_nisbi")

[node name="ColorRect" type="ColorRect" parent="."]
light_mask = 0
offset_left = 37.0
offset_top = 34.0
offset_right = 1121.0
offset_bottom = 622.0
color = Color(0.696595, 0.466588, 0.558643, 1)
metadata/_edit_use_anchors_ = true

[node name="CloseButton" type="Button" parent="."]
offset_left = 980.0
offset_top = 53.0
offset_right = 1090.0
offset_bottom = 119.0
text = "X"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 156.0
offset_top = 67.0
offset_right = 920.0
offset_bottom = 480.0
text = "Deze raadsel is over kracht in de ruimte tussen verschillende hemellichamen, kunnen jullie bepalen over welke hemellichaam het gaat? 


Fgrav = 3,52 * 10^22 N 

G = constante(zelf opzoeken) 

Maarde = (zelf opzoeken) 

r = 1,496 * 10^11 

m = niet bekende 

Hulpmiddelen: 
Binas tabel 31 +  7A "
autowrap_mode = 1

[node name="AnswerField" type="LineEdit" parent="."]
offset_left = 167.0
offset_top = 507.0
offset_right = 933.0
offset_bottom = 564.0
metadata/_edit_use_anchors_ = true

[node name="SubmitButton" type="Button" parent="."]
offset_left = 957.0
offset_top = 507.0
offset_right = 1062.0
offset_bottom = 565.0
text = "Submit"
metadata/_edit_use_anchors_ = true

[node name="InstructionSun" type="Sprite2D" parent="."]
position = Vector2(553, 239)
texture = ExtResource("2_njqp3")

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
