[gd_scene load_steps=12 format=3 uid="uid://cmvnec3nuyjdq"]

[ext_resource type="Script" uid="uid://bskn7vvywygq5" path="res://scripts/room_4.gd" id="1_fkic7"]
[ext_resource type="Resource" uid="uid://8gf5so7e87n5" path="res://dialogue/4_computer.dialogue" id="2_23hl6"]
[ext_resource type="Texture2D" uid="uid://c8yo8y3xis6c3" path="res://images/4.png" id="2_fkic7"]
[ext_resource type="Script" uid="uid://fmo17p8nnbg1" path="res://scripts/arrow.gd" id="3_rb4hd"]
[ext_resource type="PackedScene" uid="uid://c1kk6wsakirc4" path="res://scenes/hints.tscn" id="4_3cbqk"]
[ext_resource type="Script" uid="uid://dy7l7xohs6gpf" path="res://scripts/instructions.gd" id="5_16up7"]
[ext_resource type="Texture2D" uid="uid://cx45inlgfxh2" path="res://images/diary.png" id="6_4rsdj"]
[ext_resource type="FontFile" uid="uid://bwaxmsxhkpxo0" path="res://other assets/HomemadeApple-Regular.ttf" id="7_3rrnb"]
[ext_resource type="Texture2D" uid="uid://c44c25ky44n0a" path="res://images/table.png" id="8_l2fmq"]
[ext_resource type="PackedScene" uid="uid://cyy0ug8bcqum4" path="res://scenes/object.tscn" id="10_3cbqk"]
[ext_resource type="PackedScene" uid="uid://c18jo8lkljcts" path="res://scenes/dragable.tscn" id="11_16up7"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_fkic7")
computer = ExtResource("2_23hl6")

[node name="Room3" type="Sprite2D" parent="."]
position = Vector2(577.649, 325.5)
scale = Vector2(0.898254, 0.847656)
texture = ExtResource("2_fkic7")

[node name="Arrow" type="Button" parent="." groups=["Buttons"]]
offset_left = 14.0
offset_top = 184.0
offset_right = 104.0
offset_bottom = 245.0
text = "⬅️"
script = ExtResource("3_rb4hd")
destination_scene = 6

[node name="Computer" type="Button" parent="." groups=["Buttons"]]
modulate = Color(1, 1, 1, 0)
offset_left = 840.0
offset_top = 313.0
offset_right = 971.0
offset_bottom = 466.0
mouse_default_cursor_shape = 2

[node name="ShowHint" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 34.0
offset_top = 18.0
offset_right = 172.0
offset_bottom = 162.0

[node name="ShowInstructions" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 947.0
offset_top = 304.0
offset_right = 993.0
offset_bottom = 341.0

[node name="Hints" parent="." instance=ExtResource("4_3cbqk")]

[node name="Instructions" type="Node2D" parent="."]
visible = false
light_mask = 0
script = ExtResource("5_16up7")

[node name="ColorRect" type="ColorRect" parent="Instructions"]
visible = false
light_mask = 0
offset_left = 37.0
offset_top = 34.0
offset_right = 1121.0
offset_bottom = 622.0
color = Color(0.167168, 0.0861916, 0.119708, 1)
metadata/_edit_use_anchors_ = true

[node name="Diary" type="Sprite2D" parent="Instructions"]
position = Vector2(586.5, 320)
scale = Vector2(1.81833, 1.46837)
texture = ExtResource("6_4rsdj")

[node name="CloseButton" type="Button" parent="Instructions"]
offset_left = 1006.0
offset_top = 34.0
offset_right = 1116.0
offset_bottom = 100.0
text = "X"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Instructions"]
offset_left = 640.0
offset_top = 75.0
offset_right = 1102.0
offset_bottom = 351.0
text = "REGELS

1. Het antivirus is het enige middel dat precies één virus volledig neutraliseert

2. Middelen die geen virussen neutraliseren vallen ook af.

3. Gedeeltelijke effecten tellen niet als neutralisatie."
autowrap_mode = 2

[node name="Label2" type="Label" parent="Instructions"]
offset_left = 99.0
offset_top = 61.0
offset_right = 514.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_3rrnb")
theme_override_font_sizes/font_size = 22
text = "Logboek 
15.11

Vandaag heb ik mijn antivirus getest op 4 virussen,
 en het werkt! Ik heb hieronder wat regels geschrven
om mij te herinneren welke virus het gaat."
autowrap_mode = 2

[node name="Table" type="Sprite2D" parent="Instructions"]
position = Vector2(868.5, 433.75)
scale = Vector2(0.504742, 0.642606)
texture = ExtResource("8_l2fmq")

[node name="Fuel" type="Node2D" parent="."]

[node name="Pyreon" type="Button" parent="Fuel"]
modulate = Color(1, 1, 1, 0)
offset_left = 508.0
offset_top = 401.0
offset_right = 541.0
offset_bottom = 432.0

[node name="Calmisol" type="Button" parent="Fuel"]
modulate = Color(1, 1, 1, 0)
offset_left = 554.0
offset_top = 402.0
offset_right = 587.0
offset_bottom = 433.0

[node name="Endryl" type="Button" parent="Fuel"]
modulate = Color(1, 1, 1, 0)
offset_left = 596.0
offset_top = 401.0
offset_right = 629.0
offset_bottom = 432.0

[node name="Inertase" type="Button" parent="Fuel"]
modulate = Color(1, 1, 1, 0)
offset_left = 642.0
offset_top = 402.0
offset_right = 675.0
offset_bottom = 433.0

[node name="Node2D" parent="Fuel" instance=ExtResource("10_3cbqk")]
position = Vector2(526, 419)
scale = Vector2(0.25, 0.25)

[node name="Node2D2" parent="Fuel" instance=ExtResource("10_3cbqk")]
position = Vector2(568, 420)
scale = Vector2(0.25, 0.25)

[node name="Node2D3" parent="Fuel" instance=ExtResource("10_3cbqk")]
position = Vector2(615, 419)
scale = Vector2(0.25, 0.25)

[node name="Node2D4" parent="Fuel" instance=ExtResource("10_3cbqk")]
position = Vector2(657, 419)
scale = Vector2(0.25, 0.25)

[node name="Answers" type="Node2D" parent="."]

[node name="StaticBody2D" parent="Answers" instance=ExtResource("11_16up7")]
position = Vector2(246, 610)
scale = Vector2(0.3, 0.3)

[node name="StaticBody2D2" parent="Answers" instance=ExtResource("11_16up7")]
position = Vector2(295, 610)
scale = Vector2(0.3, 0.3)

[node name="HomeFuel" type="Node2D" parent="."]
position = Vector2(1, -81)

[node name="StaticBody2D3" parent="HomeFuel" instance=ExtResource("11_16up7")]
position = Vector2(525, 419)
scale = Vector2(0.25, 0.25)

[node name="StaticBody2D4" parent="HomeFuel" instance=ExtResource("11_16up7")]
position = Vector2(567, 418)
scale = Vector2(0.25, 0.25)

[node name="StaticBody2D5" parent="HomeFuel" instance=ExtResource("11_16up7")]
position = Vector2(615, 419)
scale = Vector2(0.25, 0.25)

[node name="StaticBody2D6" parent="HomeFuel" instance=ExtResource("11_16up7")]
position = Vector2(656, 419)
scale = Vector2(0.25, 0.25)

[node name="PowerButton" type="Button" parent="." groups=["Buttons"]]
modulate = Color(1, 1, 1, 0)
offset_left = 412.0
offset_top = 616.0
offset_right = 435.0
offset_bottom = 637.0

[node name="PowerLight" type="ColorRect" parent="."]
offset_left = 429.0
offset_top = 540.0
offset_right = 448.0
offset_bottom = 554.0
color = Color(1, 0, 0, 1)

[node name="PowerIndicator" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="PowerIndicator"]
offset_left = 353.0
offset_top = 570.0
offset_right = 438.0
offset_bottom = 582.0
color = Color(0.750132, 2.80602e-05, 0.2213, 1)

[node name="ColorRect2" type="ColorRect" parent="PowerIndicator"]
offset_left = 353.0
offset_top = 570.0
offset_right = 412.0
offset_bottom = 582.0
color = Color(0.904227, 0.357879, 0.189646, 1)

[node name="ColorRect3" type="ColorRect" parent="PowerIndicator"]
offset_left = 353.0
offset_top = 570.0
offset_right = 381.0
offset_bottom = 582.0
color = Color(0, 1, 0.5, 1)

[connection signal="pressed" from="Arrow" to="Arrow" method="_on_pressed"]
[connection signal="pressed" from="Computer" to="." method="_on_computer_pressed"]
[connection signal="pressed" from="ShowHint" to="Hints" method="_on_show_hint_pressed"]
[connection signal="pressed" from="ShowInstructions" to="Instructions" method="_on_show_instructions_pressed"]
[connection signal="pressed" from="Instructions/CloseButton" to="Instructions" method="_on_close_button_pressed"]
[connection signal="pressed" from="Fuel/Pyreon" to="." method="_on_pyreon_pressed"]
[connection signal="pressed" from="Fuel/Calmisol" to="." method="_on_calmisol_pressed"]
[connection signal="pressed" from="Fuel/Endryl" to="." method="_on_endryl_pressed"]
[connection signal="pressed" from="Fuel/Inertase" to="." method="_on_inertase_pressed"]
[connection signal="pressed" from="PowerButton" to="." method="_on_power_button_pressed"]
